--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "arraybuffer-to-string": "^1.0.2",
     "base64url": "^3.0.1",
+    "cbor-sync": "^1.0.4",
     "detect-character-encoding": "^0.8.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
