--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "arraybuffer-to-string": "^1.0.2",
+    "base-64": "^1.0.0",
     "base64url": "^3.0.1",
     "buffer": "^6.0.3",
     "cbor-sync": "^1.0.4",
