--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "base64url": "^3.0.1",
     "buffer": "^6.0.3",
     "cbor-sync": "^1.0.4",
+    "crypto": "^1.0.1",
     "detect-character-encoding": "^0.8.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
